<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity">

    <data>
        <variable
            name="handler"
            type="com.appscripdemo.triviaapp.ui.activities.MainActivity.ClickHandler" />
        <variable
            name="quizDetails"
            type="com.appscripdemo.triviaapp.models.QuizDetails" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_8"
            android:layout_marginBottom="@dimen/dimen_24"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dimen_24">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_24"
                android:text="@string/what_is_your_name"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_52"
                android:hint="@string/hintName"
                android:orientation="horizontal"
                style="@style/myTextInputLabel"
                app:errorEnabled="true"
                app:errorTextColor="@color/errorTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:text="@={quizDetails.userName}"
                    android:textSize="@dimen/normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_52"
                android:layout_margin="@dimen/dimen_8"
                android:backgroundTint="@color/buttonPrimaryColor"
                android:gravity="center"
                android:onClick="@{handler::onNextButtonClick}"
                android:text="@string/next_button_text"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/historyButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_52"
                android:layout_margin="@dimen/dimen_8"
                android:backgroundTint="@color/buttonPrimaryColor"
                android:gravity="center"
                android:onClick="@{handler::onHistoryButtonClick}"
                android:text="@string/history_button_text"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

</layout>